[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/title.png" type="Texture" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 156.097
margin_top = 31.9991
margin_right = 864.097
margin_bottom = 562.999
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="."]
margin_left = 363.593
margin_top = 209.644
margin_right = 488.593
margin_bottom = 252.644
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="."]
margin_left = 363.593
margin_top = 268.444
margin_right = 488.593
margin_bottom = 311.444
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="."]
margin_left = 364.928
margin_top = 329.179
margin_right = 489.928
margin_bottom = 372.179
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Button" parent="."]
margin_left = 563.151
margin_top = 210.311
margin_right = 688.151
margin_bottom = 253.311
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Button" parent="."]
margin_left = 563.151
margin_top = 269.111
margin_right = 688.151
margin_bottom = 312.111
text = "Level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6" type="Button" parent="."]
margin_left = 564.486
margin_top = 329.846
margin_right = 689.486
margin_bottom = 372.846
text = "Level 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level7" type="Button" parent="."]
visible = false
margin_left = 643.909
margin_top = 202.302
margin_right = 768.909
margin_bottom = 245.302
text = "Level 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level8" type="Button" parent="."]
visible = false
margin_left = 643.909
margin_top = 261.102
margin_right = 768.909
margin_bottom = 304.102
text = "Level 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level9" type="Button" parent="."]
visible = false
margin_left = 645.244
margin_top = 321.837
margin_right = 770.244
margin_bottom = 364.837
text = "Level 9"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Level8" to="." method="_on_Level8_pressed"]
[connection signal="pressed" from="Level9" to="." method="_on_Level9_pressed"]
