extends Node2D

func _on_Level1_pressed():
	Global.goto_scene("res://Level1.tscn")


func _on_Level2_pressed():
	Global.goto_scene("res://Level2.tscn")


func _on_Level3_pressed():
	Global.goto_scene("res://Level3.tscn")


func _on_Level4_pressed():
	Global.goto_scene("res://Level4.tscn")


func _on_Level5_pressed():
	Global.goto_scene("res://Level5.tscn")


func _on_Level6_pressed():
	Global.goto_scene("res://Level6.tscn")


func _on_Level7_pressed():
	Global.goto_scene("res://Level7.tscn")


func _on_Level8_pressed():
	Global.goto_scene("res://Level8.tscn")


func _on_Level9_pressed():
	Global.goto_scene("res://Level9.tscn")
